[metadata]
name = fsholetree
summary = Tool to generate file tree with empty files based on real file tree
author = Ivan Mironov
author-email = mironov.ivan@gmail.com
home-page = https://github.com/im-0/fsholetree

[files]
packages =
    fsholetree

[options.entry_points]
console_scripts =
    fsholetree = fsholetree.cli:main
